integration-tests/chain-signatures/out.txt
   Compiling mpc-node v1.0.0-rc.5 (/Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node)
error[E0432]: unresolved import `crate::gcp::DatastoreResult`
  --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/types.rs:13:18
   |
13 | use crate::gcp::{DatastoreResult, GcpService, KeyKind};
   |                  ^^^^^^^^^^^^^^^ no `DatastoreResult` in `gcp`

warning: unused imports: `FromValue` and `IntoValue`
 --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/gcp/mod.rs:4:19
  |
4 | use self::value::{FromValue, IntoValue};
  |                   ^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `crate::gcp::error::DatastoreStorageError`
 --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/gcp/mod.rs:5:5
  |
5 | use crate::gcp::error::DatastoreStorageError;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `google_datastore1::api::Filter`
 --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/gcp/mod.rs:8:5
  |
8 | use google_datastore1::api::Filter;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `CommitRequest`, `EntityResult`, `Entity`, `KindExpression`, `LookupRequest`, `Mutation`, `PathElement`, `Query`, and `RunQueryRequest`
  --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/gcp/mod.rs:10:5
   |
10 |     CommitRequest, Entity, EntityResult, Key, KindExpression, LookupRequest, Mutation, PathElement,
   |     ^^^^^^^^^^^^^  ^^^^^^  ^^^^^^^^^^^^       ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^^^^
11 |     Query, RunQueryRequest,
   |     ^^^^^  ^^^^^^^^^^^^^^^

warning: unused imports: `FromRedisValue`, `RedisWrite`, and `ToRedisArgs`
 --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/storage/app_data_storage.rs:4:28
  |
4 | use redis::{AsyncCommands, FromRedisValue, RedisWrite, ToRedisArgs};
  |                            ^^^^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^^

warning: unused variable: `datastore`
   --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/gcp/mod.rs:104:13
    |
104 |         let datastore = if let Some(gcp_datastore_url) = storage_options.gcp_datastore_url.clone() {
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_datastore`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0599]: no method named `presig_key` found for reference `&AppDataRedisStorage` in the current scope
  --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/storage/app_data_storage.rs:28:23
   |
28 |                 &self.presig_key(),
   |                       ^^^^^^^^^^ method not found in `&AppDataRedisStorage`

error[E0599]: no method named `presig_key` found for reference `&AppDataRedisStorage` in the current scope
  --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/storage/app_data_storage.rs:38:65
   |
38 |         let result: Option<Presignature> = connection.hget(self.presig_key(), id).await?;
   |                                                                 ^^^^^^^^^^ method not found in `&AppDataRedisStorage`

error[E0308]: mismatched types
  --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/storage/app_data_storage.rs:36:110
   |
36 |       pub async fn get_last_processed_block(&self, id: &PresignatureId) -> AppDataResult<Option<Presignature>> {
   |  ______________________________________________________________________________________________________________^
37 | |         let mut connection = self.redis_pool.get().await?;
38 | |         let result: Option<Presignature> = connection.hget(self.presig_key(), id).await?;
39 | |     }
   | |_____^ expected `Result<Option<Presignature>, Error>`, found `()`
   |
   = note:   expected enum `std::result::Result<std::option::Option<Presignature>, anyhow::Error>`
           found unit type `()`

error[E0609]: no field `datastore` on type `&GcpService`
   --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/types.rs:145:13
    |
145 |         gcp.datastore
    |             ^^^^^^^^^ unknown field
    |
    = note: available fields are: `project_id`, `secret_manager`, `account_id`

error[E0609]: no field `datastore` on type `&GcpService`
   --> /Users/serhii/Projects/NEAR/mpc-recovery/chain-signatures/node/src/types.rs:156:13
    |
156 |         gcp.datastore.upsert(self).await
    |             ^^^^^^^^^ unknown field
    |
    = note: available fields are: `project_id`, `secret_manager`, `account_id`

Some errors have detailed explanations: E0308, E0432, E0599, E0609.
For more information about an error, try `rustc --explain E0308`.
warning: `mpc-node` (lib) generated 6 warnings
error: could not compile `mpc-node` (lib) due to 6 previous errors; 6 warnings emitted
